# threshold

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  requirements.txt
config/: config.json  config_epidemic.json  config_experiment.json  config_input.json  config_network_model.json  config_network_model_erdosrenyi.json  config_network_model_scalefree.json  config_opinion.json  config_output.json  config_vaccination.json  default.toml
data/: average_contacts_data.json  norm_degree_data.json  norm_population_age_data.json  population_age_data.json  state_degree.json  state_population_age.json  vaccination_data.json
data/curated/: contacts_age_data.json  population_data.json  state_degree.json  state_population_age.json
notebooks/: analysis_paper.ipynb  analysis_supplementary.ipynb
scripts/: collect_networks.py  curate_age_data.py  launch_datadriven_threshold.sh  launch_homogeneous_threshold.sh  launch_multilayer.sh  launch_parallel_us.sh  launch_parallel_usvac.sh  launch_threshold_us.sh  parallel_homogeneous_heatmap.sh  parallel_multilayer.sh  parallel_vaccination_curves.sh
src/: agent.rs  analysis.py  analysis.rs  con_plot.py  cons.rs  copy_to_mycomp.sh  core.rs  exps.rs  generate_states_list.sh  global_plots.py  launch_parallel.sh  launch_parallel_multilayer.sh  launch_parallel_us.sh  launch_threshold.sh  launch_threshold_us.sh  lib.rs  main.rs  plot_agents.py  plot_chapter.py  plot_multilayer.py  plots.py  script.py  utils.py  utils.rs  utils_old.py
