[package]
name = "threshold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

netrust = {path = "../netrust"}
config = "0.11.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rv = "0.16.4"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
clap = { version = "3.2", features = ["derive"] }

[profile.release]
lto = true